# graph-network-harness

./: .gitignore  CI.md  CLAUDE.md  CLI-ENHANCEMENT-PLAN.md  CODE-POLICY.md  Cargo.toml  DAEMON.md  DESIGN-PHASE4.md  ISSUES-BACKLOG.md  README.md  TANGENTS.md  VARIABLE-SUBSTITUTION.md  deny.toml  example-simple.yaml  services.yaml  test-env-resolution.yaml  test_daemon.sh  test_daemon_tls.sh
ADRs/: 001-dind-isolation.md  002-image-sync.md  003-logging-sessions.md  004-project-structure.md  README.md  (+14 more)
crates/async-runtime-compat/: Cargo.toml
crates/async-runtime-compat/src/: async_std.rs  lib.rs  runtime_utils.rs  smol.rs  tokio.rs
crates/command-executor/: Cargo.toml  README.md  STDIN_ARCHITECTURE.md  deny.toml
crates/command-executor/src/: attacher.rs  backend.rs  command.rs  error.rs  event.rs  executor.rs  launcher.rs  lib.rs  process.rs  stdin.rs  stdin_test.rs  target.rs
crates/command-executor/src/backends/: attacher.rs  launcher.rs  local.rs  mod.rs  ssh.rs  sudo.rs
crates/command-executor/src/layered/: attacher.rs  executor.rs  integration_tests.rs  layers.rs  mod.rs
crates/command-executor/tests/: README.md  attacher_tests.rs  error_context.rs  integration_nested.rs  launcher_tests.rs  local_attacher.rs  local_executor.rs  nested_attachers.rs  nested_launchers.rs  process_cleanup.rs  regression_stack_overflow.rs  self_hosted_integration.rs  shared_container_tests.rs  ssh_container_tests.rs  ssh_docker.rs  stdin_forwarding_integration.rs  stdin_layered_tests.rs  systemd_integration.rs  systemd_portable.rs  systemd_portable_ssh.rs  test_cleanup_verification.rs
crates/command-executor/tests/common/: mod.rs  shared_container.rs  test_harness.rs
crates/command-executor/tests/ssh_container_tests/: cleanup_verification.rs  integration_nested_ssh.rs  regression_ssh.rs  self_hosted_ssh.rs  shared_container.rs  systemd_portable_ssh.rs
crates/command-executor/tests/systemd-container/: .gitignore  Dockerfile  README.md  create-test-services.sh  docker-compose.yaml  generate-ssh-keys.sh  run-systemd-tests.sh
crates/command-executor/tests/systemd-container/test-services/counter-service/etc/: os-release
crates/command-executor/tests/systemd-container/test-services/counter-service/etc/systemd/system/: counter-service.service
crates/command-executor/tests/systemd-container/test-services/echo-service/etc/: os-release
crates/command-executor/tests/systemd-container/test-services/echo-service/etc/systemd/system/: echo-service.service
crates/graph-test-daemon/: Cargo.toml  README.md
crates/graph-test-daemon/configs/: graph-stack-with-tasks.yaml  graph-stack.yaml
crates/graph-test-daemon/src/: actions.rs  daemon.rs  lib.rs  main.rs  service_factory.rs  service_registry.rs  services.rs  services_test.rs  task_factory.rs  tasks.rs
crates/graph-test-daemon/tests/: service_setup_tests.rs  subgraph_deploy_tests.rs
crates/harness/: Cargo.toml  README.md
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: main.rs
crates/harness-config/: Cargo.toml  README.md
crates/harness-config/examples/: debug_parser.rs  test_nom_parser.rs  test_resolver.rs  test_validation.rs
crates/harness-config/src/: lib.rs  parser.rs  resolver.rs
crates/harness-config/tests/: integration_tests.rs
crates/harness-core/: Cargo.toml  README.md
crates/harness-core/src/: action.rs  client.rs  daemon.rs  error.rs  lib.rs  service.rs  task.rs  typed_action.rs
crates/harness-core/tests/: integration_test.rs
crates/harness/examples/: README.md  demo-daemon-ws.rs  demo-daemon.rs  event_handler_demo.rs
crates/harness/src/: lib.rs  logging.rs  main.rs  protocol.rs
crates/harness/src/client/: mod.rs  protocol.rs
crates/harness/src/commands/: client.rs  daemon.rs  dependencies.rs  env.rs  mod.rs  start.rs  status.rs  stop.rs  validate.rs
crates/harness/src/container/: config.rs  image_sync.rs  manager.rs
crates/harness/src/daemon/: certificates.rs  handlers.rs  mod.rs  server.rs
crates/harness/src/inspection/: events.rs  handlers.rs  registry.rs  streamer.rs
crates/harness/src/self_test/: container.rs  image_sync.rs  mod.rs
crates/harness/tests/: cli_daemon_protocol_tests.rs  cli_integration_tests.rs  cli_user_scenarios.rs  container_integration.rs  service_inspection_test.rs
crates/harness/tests/common/: mod.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  manager.rs
crates/orchestrator/src/executors/: docker.rs  remote.rs
crates/orchestrator/tests/: integration_tests.rs
crates/service-orchestration/: COMPOSABLE_ARCHITECTURE.md  Cargo.toml  README.md
crates/service-orchestration/src/: config.rs  context.rs  discovery.rs  health.rs  health_integration.rs  lib.rs  manager.rs  orchestrator.rs  package.rs  state.rs  task_config.rs
crates/service-orchestration/src/executors/: attached.rs  docker.rs  mod.rs  process.rs  registry.rs  remote.rs  stream_utils.rs  traits.rs
crates/service-orchestration/tests/: health_monitoring_integration_tests.rs  integration_tests.rs  orchestration_integration_tests.rs  orchestrator_executor_tests.rs  service_discovery_tests.rs  service_setup_integration_tests.rs  task_execution_tests.rs
crates/service-registry/: Cargo.toml  README.md
crates/service-registry/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  package.rs  registry.rs  tls.rs  websocket.rs
crates/service-registry/src/backend/: memory.rs  mod.rs  sled.rs
crates/service-registry/src/network/: ip_allocator.rs  mod.rs  resolver.rs  topology.rs
crates/service-registry/tests/: README.md  event_system_tests.rs  integration_harness.rs  network_discovery_tests.rs  node_variants.rs  tls_tests.rs  websocket_integration.rs  websocket_tests.rs
crates/service-registry/tests/common/: mod.rs  test_harness.rs  test_services.rs  websocket_client.rs
crates/service-registry/tests/network_discovery_tests/: basic_tests.rs  mod.rs  setup.rs  shared_dind.rs
crates/service-registry/tests/network_tests/docker-compose/: lan-simple.yml  local-only.yml  mixed-topology.yml
xtask/: Cargo.toml
xtask/src/: ci.rs  docker.rs  main.rs  test.rs
(+65 files in other folders)
