[workspace]
members = [
    "crates/command-executor",
    "crates/service-registry",
    "crates/service-orchestration",
    "crates/harness-config",
    "crates/harness-core",
    "crates/harness",
    "crates/graph-test-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Graph Network Harness Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/graphprotocol/graph-network-harness"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.21"
reqwest = { version = "0.12.15", features = ["json"] }

# Container and process management
duct = "0.13"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
tempfile = "3.13"
futures = "0.3"
futures-util = "0.3"
notify = "6.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
base64 = "0.21"
async-trait = "0.1"
pin-project-lite = "0.2"
nom = "7.1"

# New dependencies for distributed features
wireguard-control = "1.5"
openssh = "0.10"
dirs = "5.0"

# Service registry dependencies
async-tungstenite = "0.25"
tungstenite = "0.21"
async-net = "2.0"
async-fs = "2.1"
async-tls = { version = "0.13", default-features = false }
rustls = "0.21"
rustls-pemfile = "2.0"
webpki-roots = "0.22"
ipnet = { version = "2.9", features = ["serde"] }
indexmap = "2.0"
smol = "2.0"

# Internal crates
command-executor = { path = "crates/command-executor" }
service-registry = { path = "crates/service-registry" }
service-orchestration = { path = "crates/service-orchestration" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"

