[workspace]
members = [
    "crates/command-executor",
    "crates/service-registry",
    "crates/service-orchestration",
    "crates/harness-config",
    "crates/harness-core",
    "crates/harness",
    "crates/graph-test-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["The Graph Network Harness Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/graphprotocol/graph-network-harness"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0.12"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12.15", features = ["json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
tempfile = "3.13"
futures = "0.3"
futures-util = "0.3"
notify = "8.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
base64 = "0.22.1"
async-trait = "0.1"
pin-project-lite = "0.2"
nom = "8.0.0"
schemars = "1.0.4"

# New dependencies for distributed features
wireguard-control = "1.5"

# Database
sled = "0.34"
dirs = "6.0"

# Service registry dependencies
async-tungstenite = "0.30"
tungstenite = "0.27"
async-net = "2.0"
async-fs = "2.1"
async-channel = "2.5"
futures-rustls = "0.26"
rustls = { version = "0.23.29" }
rustls-pemfile = "2.2"
webpki-roots = "1.0.2"
ipnet = { version = "2.9", features = ["serde"] }
indexmap = "2.0"
smol = "2.0"

# Testing dependencies
smol-potat = "1.0"

# Ethereum/EVM dependencies
alloy = { version = "1.0", features = ["full", "node-bindings", "anvil"] }
alloy-rpc-types-anvil = "1.0"

# Internal crates
command-executor = { path = "crates/command-executor" }
service-registry = { path = "crates/service-registry" }
service-orchestration = { path = "crates/service-orchestration" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
