[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
command-executor = { path = "../crates/command-executor" }
clap = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
smol = "2.0"
cargo_metadata = "0.18"
chrono = { workspace = true }