[package]
name = "command-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Runtime-agnostic async primitives
async-process = "2.0"
async-trait = { workspace = true }
futures = "0.3"
futures-util = { workspace = true }
futures-lite = "2.0"

# Error handling and utilities
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# For signal handling on Unix
nix = { version = "0.29", features = ["signal", "process"] }

[features]
default = []
ssh = []
docker = []  # Docker support via CLI wrapper
full = ["ssh", "docker"]

# Test features
integration-tests = []
docker-tests = ["docker", "integration-tests"]
ssh-tests = ["ssh", "integration-tests"]

[dev-dependencies]
# Use smol for testing - it's lightweight and runtime-agnostic
smol = "2.0"
smol-potat = { workspace = true }
tempfile = { workspace = true }
anyhow = "1.0"
futures = "0.3"
# For signal handling in tests
signal-hook = "0.3"
# For atexit handler
libc = "0.2"

[lints]
workspace = true
