[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Graph Network Harness"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
# Core
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# Internal crates
graph-network-harness = { workspace = true }
service-registry = { workspace = true }

# Utilities
chrono = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }