[package]
name = "graph-network-harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Test harness for The Graph Network services"

[lib]
name = "graph_network_harness"
path = "src/lib.rs"

[dependencies]
# Core
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Process management
duct = { workspace = true }

# Remote management
openssh = { workspace = true }

# Network management
wireguard-control = { workspace = true }

# Internal crates
service-registry = { workspace = true }

# Utilities
uuid = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
clap = { workspace = true }
