[package]
name = "orchestrator"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Heterogeneous service orchestration implementing ADR-007"

[features]
default = []
ssh-tests = ["command-executor/ssh-tests"]
docker-tests = ["command-executor/docker-tests"]

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

# Internal crates
command-executor = { workspace = true }
service-registry = { workspace = true }

# Additional dependencies for orchestration
tokio = { version = "1.0", features = ["full"], optional = true }
async-std = { version = "1.12", optional = true }
smol = { version = "2.0", optional = true }

# For package management
tar = "0.4"
flate2 = "1.0"
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Use smol for runtime-agnostic tests
smol = "2.0"

