[package]
name = "service-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core - runtime agnostic
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }

# Async runtime-agnostic
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# WebSocket - no runtime features!
async-tungstenite = { workspace = true, default-features = false }
tungstenite = { workspace = true }

# Runtime-agnostic networking and file I/O
async-net = { workspace = true }
async-fs = { workspace = true }

# TLS support (optional)
async-tls = { workspace = true, optional = true, features = ["server", "client"] }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
tempfile = { workspace = true }

# Networking
ipnet = { workspace = true }

# Command execution
command-executor = { path = "../command-executor" }

[dev-dependencies]
# Use smol for tests - runtime agnostic
smol = "2.0"
tempfile = { workspace = true }
anyhow = { workspace = true }
async-fs = { workspace = true }
# For TLS test certificate generation
rcgen = "0.12"

[features]
default = []
# TLS support
tls = ["async-tls", "rustls", "rustls-pemfile", "webpki-roots"]
# Integration testing features
integration-tests = []
docker-tests = []
ssh-tests = []
