[package]
name = "service-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core - runtime agnostic
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }

# Async runtime-agnostic
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# WebSocket - no runtime features!
async-tungstenite = { workspace = true, default-features = false }
tungstenite = { workspace = true }

# Runtime-agnostic networking and file I/O
async-net = { workspace = true }
async-fs = { workspace = true }

# TLS support (required)
async-tls = { workspace = true, features = ["server", "client"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }

# Utilities
uuid = { workspace = true }
tempfile = { workspace = true }

# Networking
ipnet = { workspace = true }

# Command execution
command-executor = { path = "../command-executor" }

[dev-dependencies]
# Use smol for tests - runtime agnostic
smol = "2.0"
tempfile = { workspace = true }
anyhow = { workspace = true }
async-fs = { workspace = true }
# For TLS test certificate generation
rcgen = "0.12"

[features]
default = []
# Integration testing features
integration-tests = []
docker-tests = []
ssh-tests = []
